[package]
name = "opencorpora"
description = "Reading and parsing opencorpora.org XML-dictionary."
repository = "https://github.com/antage/opencorpora"
documentation = "https://antage.github.io/opencorpora/opencorpora/index.html"
readme = "README.md"
license = "MIT"
keywords = ["opencorpora", "dictionary", "russian"]
categories = ["parser-implementations"]
version = "0.1.4"
authors = ["Anton Ageev <antage@gmail.com>"]
exclude = ["target", "dict/*", "Makefile"]
include = ["**/*.rs", "Cargo.toml", "LICENSE"]

[badges]
travis-ci = { repository = "antage/opencorpora" }

[dependencies]
quick-xml = "^0.6.2"
quick-error = "^1.1.0"

[dev-dependencies]
hyper = "^0.10.5"
bzip2 = "^0.3.1"

[profile.test]
opt-level = 3
