[package]
name = "opencorpora"
description = "Reading and parsing opencorpora.org XML-dictionary."
repository = "https://github.com/antage/opencorpora"
documentation = "https://docs.rs/opencorpora"
readme = "README.md"
license = "MIT"
keywords = ["opencorpora", "dictionary", "russian"]
categories = ["parser-implementations"]
version = "0.2.0"
authors = ["Anton Ageev <antage@gmail.com>"]
exclude = ["target", "dict/*", "Makefile"]
include = ["**/*.rs", "Cargo.toml", "LICENSE"]

[badges]
travis-ci = { repository = "antage/opencorpora" }

[dependencies]
quick-xml = "^0.10.0"
error-chain = "^0.11.0"

[dev-dependencies]
futures = "^0.1"
tokio-core = "^0.1"
hyper = "^0.11.0"
bzip2 = "^0.3.0"

[profile.test]
opt-level = 3
