[package]
name = "opencorpora"
edition = "2021"
description = "Reading and parsing opencorpora.org XML-dictionary."
repository = "https://github.com/antage/opencorpora"
documentation = "https://docs.rs/opencorpora"
readme = "README.md"
license = "MIT"
keywords = ["opencorpora", "dictionary", "russian"]
categories = ["parser-implementations"]
version = "0.3.0"
authors = ["Anton Ageev <antage@gmail.com>"]
exclude = ["target", "dict/*", "Makefile"]
include = ["**/*.rs", "Cargo.toml", "LICENSE"]

[badges]
travis-ci = { repository = "antage/opencorpora" }

[dependencies]
quick-xml = "0.23"
thiserror = "1.0"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
bzip2 = "0.4.3"

[profile.test]
opt-level = 3
